May 10 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Copied the materials to Script/material.dat (however with some problems.)
	* Added ring of fire resistance
May 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Very lousy item database structures added
	* The Ultimate Script Malfunction Error Bug of Underscore Conflict corrected, not maybe
	* Many new bug adds

May 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* The Ultimate Script Malfunction Error Bug of Underscore Conflict corrected, maybe

May 9 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Bug corrections

May 9 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Material database structures added

May 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Wand of resurrection added

May 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Animations work now with SDL
	* Wand of locking added 

May 7 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Animations work in the DOS port now

May 7 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Heavily modified the material system
	* Added animation engine
	* Removed much commented outdated code
	* Removed many useless string casts
	* Added some new operator overloads fro string

May 5 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* String and save routine optimizations

May 5 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Most of script code structures and data reading routines remade
	* Some template instantiation relocations committed
	* Warning corrections

May 3 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Some possible memory leaks prevented
	* Eating corpses works again, I think
	* The Great Optimized Inventory Bug corrected
	* Other bug corrections

2002-05-01  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* Silhouette added to humanoids

May 1 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Bug corrections

May 1 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Warning corrections

May 1 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Monsters can move again
	* Some list tweaks
